--- a/stock-indexes-service/stock-indexes-provider/pom.xml
+++ b/stock-indexes-service/stock-indexes-provider/pom.xml
@@ -19,4 +19,18 @@
 			<name>Konrad Jakubiec</name>
 		</developer>
 	</developers>
+
+	<dependencies>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sourceforge.javacsv</groupId>
+			<artifactId>javacsv</artifactId>
+			<version>2.0</version>
+		</dependency>
+	</dependencies>
 </project>
