--- a/stock-indexes-service/stock-indexes-core/pom.xml
+++ b/stock-indexes-service/stock-indexes-core/pom.xml
@@ -35,9 +35,9 @@
 		</dependency>
 		<!-- HSQLDB -->
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+			<version>2.3.1</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
