--- a/stockindexesclient/pom.xml
+++ b/stockindexesclient/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>stockindexesclient</groupId>
-	<artifactId>stockindexesclient</artifactId>
+	<groupId>pl.edu.agh.iosr.sis</groupId>
+	<artifactId>stock-indexes-client</artifactId>
 	<packaging>war</packaging>
 	<version>1.0</version>
 	<name>stockindexesclient</name>
@@ -21,6 +21,11 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<spring.version>4.0.2.RELEASE</spring.version>
+		<sonar.jdbc.url>jdbc:postgresql://127.0.0.1:5432/sonar</sonar.jdbc.url>
+		<sonar.jdbc.driver>org.postgresql.Driver</sonar.jdbc.driver>
+		<sonar.jdbc.username>adminvvsarkw</sonar.jdbc.username>
+		<sonar.jdbc.password>cHmJAVnTHbeh</sonar.jdbc.password>
+		<sonar.host.url>http://sonar-myapp.openshift.local</sonar.host.url>
 	</properties>
 
 	<dependencies>
@@ -140,4 +145,40 @@
 			</build>
 		</profile>
 	</profiles>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>2.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.sonar-plugins</groupId>
+				<artifactId>maven-report</artifactId>
+				<version>0.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<configuration>
+					<includeDependencySources>false</includeDependencySources>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+				  <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
