--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
+		<jasypt.version>1.9.2</jasypt.version>
 		<spring.version>4.0.2.RELEASE</spring.version>
 		<spring.security.version>3.2.3.RELEASE</spring.security.version>
 		<liquibase.version>3.0.5</liquibase.version>
@@ -89,6 +90,7 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.5.1.RELEASE</version>
 		</dependency>
+
 		<dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jms</artifactId>
@@ -109,6 +111,16 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring.security.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>${jasypt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt-springsecurity3</artifactId>
+			<version>${jasypt.version}</version>
+		</dependency>
 
 		<!-- HIBERNATE -->
 		<dependency>
@@ -125,7 +137,7 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
@@ -209,7 +221,7 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>2.7</version>
 				<configuration>
-				  <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
 				</configuration>
 			</plugin>
 		</plugins>
