Added jms support. Created draft of indexes view #13

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,8 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/spring/spring.persistence-cfg.xml,
-			/WEB-INF/spring/spring.security-cfg.xml			
+			/WEB-INF/spring/spring.security-cfg.xml,
+			/WEB-INF/spring/spring.jms-cfg.xml			
 		</param-value>
 	</context-param>
 
