--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,17 @@
 	metadata-complete="false">
 
 	<display-name>Stock Indexes Client</display-name>
-
+	
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>SUCTR</web-resource-name>
+			<url-pattern>/*</url-pattern>
+		</web-resource-collection>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
+	
 	<error-page>
 		<error-code>404</error-code>
 		<location>/error</location>
